deploy/apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dpy
  namespace: apps
  labels:
    app: backend
  annotations:
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: rcronald/backend
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1024m"
