deploy/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-svc
  namespace: apps
  labels:
    app: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
