deploy/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  rules:
  - host: backend.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-app-svc
            port:
              number: 80
